kubernetes/szilardshome/my-apps/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
    targetPort: 7878
    name: webui
  selector:
    run: radarr
