kubernetes/szilardshome/my-apps/media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-internal-webui-route
  namespace: radarr
  annotations:
    external-dns.alpha.kubernetes.io/target: "10.10.4.60"
spec:
  parentRefs:
    - name: traefik-internal
      namespace: traefik-internal
  hostnames:
    - "radarr-internal.szilardshome.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
          weight: 1
